force-app/main/default/objects/OPP_Domaine__c/OPP_Domaine__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Transcodification de la liste domaine dans Opportunité</description>
    <label>OPP_Domaine</label>
</CustomObject>