force-app/main/default/objects/OPP_Domaine__c/fields/APIpicklistValue__c.field-meta.xml
<CustomField>
    <fullName>APIpicklistValue__c</fullName>
    <label>APIpicklistValue</label>
    <length>10</length>
    <type>Text</type>
</CustomField>