force-app/main/default/objects/OPP_Domaine__c/fields/Signification__c.field-meta.xml
<CustomField>
    <fullName>Signification__c</fullName>
    <label>Signification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>