force-app/main/default/objects/OPP_Domaine__c/fields/Valeur__c.field-meta.xml
<CustomField>
    <fullName>Valeur__c</fullName>
    <label>Valeur</label>
    <length>20</length>
    <type>Text</type>
</CustomField>